// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`searchInput > renders correctly without children props 1`] = `
<DocumentFragment>
  .emotion-0 .styles__q3q8041 {
  border: none;
}

.emotion-0 .styles__q3q8045 {
  padding: 0;
}

.emotion-0 .styles__q3q8043 {
  border: none;
}

.emotion-2 {
  cursor: text;
}

<div
    data-testid="testing"
  >
    <div
      style="width: 100%;"
    >
      <div
        aria-controls="«r0»"
        aria-describedby="«r0»"
        class="styles__w40vpo9"
        tabindex="0"
      >
        <div
          class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <div>
            <div
              class="styles__q3q8049 styles_large__q3q8046"
              data-disabled="false"
              data-error="false"
              data-has-focus="false"
              data-readonly="false"
              data-success="false"
            >
              <div
                class="styles__q3q8041 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
                data-size="large"
              >
                <div
                  class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
                  data-testid="search-icon"
                >
                  <svg
                    class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_sentiment_neutral__vbm0wq3 styles_size_small__vbm0wqa styles_undefined_compound_34__vbm0wq1i"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06zM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <input
                aria-invalid="false"
                class="styles__q3q8045"
                data-size="large"
                id="«r1»"
                placeholder="Type something"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`searchInput > renders with disabled prop 1`] = `
<DocumentFragment>
  .emotion-0 .styles__q3q8041 {
  border: none;
}

.emotion-0 .styles__q3q8045 {
  padding: 0;
}

.emotion-0 .styles__q3q8043 {
  border: none;
}

.emotion-2 {
  cursor: text;
}

<div
    data-testid="testing"
  >
    <div
      style="width: 100%;"
    >
      <div
        aria-controls="«r3»"
        aria-describedby="«r3»"
        class="styles__w40vpo9"
        tabindex="0"
      >
        <div
          class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <div>
            <div
              class="styles__q3q8049 styles_large__q3q8046"
              data-disabled="true"
              data-error="false"
              data-has-focus="false"
              data-readonly="false"
              data-success="false"
            >
              <div
                class="styles__q3q8041 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
                data-size="large"
              >
                <div
                  class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
                  data-testid="search-icon"
                >
                  <svg
                    class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_true__vbm0wqe styles_sentiment_neutral__vbm0wq3 styles_size_small__vbm0wqa styles_undefined_compound_2__vbm0wqm"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06zM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <input
                aria-invalid="false"
                class="styles__q3q8045"
                data-size="large"
                disabled=""
                id="«r4»"
                placeholder="Type something"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`searchInput > renders with error prop 1`] = `
<DocumentFragment>
  .emotion-0 .styles__q3q8041 {
  border: none;
}

.emotion-0 .styles__q3q8045 {
  padding: 0;
}

.emotion-0 .styles__q3q8043 {
  border: none;
}

.emotion-2 {
  cursor: text;
}

<div
    data-testid="testing"
  >
    <div
      style="width: 100%;"
    >
      <div
        aria-controls="«rh»"
        aria-describedby="«rh»"
        class="styles__w40vpo9"
        tabindex="0"
      >
        <div
          class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <div>
            <div
              class="styles__q3q8049 styles_large__q3q8046"
              data-disabled="false"
              data-error="true"
              data-has-focus="false"
              data-readonly="false"
              data-success="false"
            >
              <div
                class="styles__q3q8041 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
                data-size="large"
              >
                <div
                  class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
                  data-testid="search-icon"
                >
                  <svg
                    class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_sentiment_neutral__vbm0wq3 styles_size_small__vbm0wqa styles_undefined_compound_34__vbm0wq1i"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06zM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <input
                aria-invalid="true"
                class="styles__q3q8045"
                data-size="large"
                id="«ri»"
                placeholder="Type something"
                type="text"
                value=""
              />
              <div
                class="styles__q3q8042 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
              >
                <svg
                  class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_sentiment_danger__vbm0wq5 styles_size_small__vbm0wqa styles_undefined_compound_36__vbm0wq1k"
                  viewBox="0 0 16 16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM8 4C8.41421 4 8.75 4.33579 8.75 4.75V7.75C8.75 8.16421 8.41421 8.5 8 8.5C7.58579 8.5 7.25 8.16421 7.25 7.75V4.75C7.25 4.33579 7.58579 4 8 4ZM8 12C8.55228 12 9 11.5523 9 11C9 10.4477 8.55228 10 8 10C7.44772 10 7 10.4477 7 11C7 11.5523 7.44772 12 8 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
          <p
            class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
          >
            there is an error
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`searchInput > renders with shortcut prop > as array of string 1`] = `
<DocumentFragment>
  .emotion-0 .styles__q3q8041 {
  border: none;
}

.emotion-0 .styles__q3q8045 {
  padding: 0;
}

.emotion-0 .styles__q3q8043 {
  border: none;
}

.emotion-2 {
  cursor: text;
}

.emotion-4 {
  cursor: text;
}

.emotion-6 {
  cursor: default;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #e9eaeb;
  min-width: 1.5rem;
  height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6[data-prominence='strong'] {
  background-color: #151a2d;
  border-color: #d9dadd;
}

.emotion-6[data-prominence='strong'][data-disabled="true"] {
  background-color: #e9eaeb;
  border-color: #e9eaeb;
}

.emotion-6[data-disabled='true'] {
  background-color: #f3f3f4;
  border-color: #d9dadd;
  cursor: not-allowed;
}

.emotion-6[data-sentiment="primary"] {
  background-color: #f1eefc;
  border-color: #8c40ef;
}

.emotion-6[data-sentiment="primary"][data-prominence='strong'] {
  background-color: #8c40ef;
}

.emotion-6[data-sentiment="primary"][data-prominence='strong'][data-disabled="true"] {
  background-color: #e5dbfd;
}

.emotion-6[data-sentiment="primary"][data-disabled='true'] {
  background: #f6f5fd;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-6[data-size="small"] {
  min-width: 1.25rem;
  height: 1.25rem;
}

<div
    data-testid="testing"
  >
    <div
      style="width: 100%;"
    >
      <div
        aria-controls="«rb»"
        aria-describedby="«rb»"
        class="styles__w40vpo9"
        tabindex="0"
      >
        <div
          class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <div>
            <div
              class="styles__q3q8049 styles_large__q3q8046"
              data-disabled="false"
              data-error="false"
              data-has-focus="false"
              data-readonly="false"
              data-success="false"
            >
              <div
                class="styles__q3q8041 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
                data-size="large"
              >
                <div
                  class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
                  data-testid="search-icon"
                >
                  <svg
                    class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_sentiment_neutral__vbm0wq3 styles_size_small__vbm0wqa styles_undefined_compound_34__vbm0wq1i"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06zM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <input
                aria-invalid="false"
                class="styles__q3q8045"
                data-size="large"
                id="«rc»"
                placeholder="Type something"
                type="text"
                value=""
              />
              <div
                class="styles__q3q8043 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
              >
                <div
                  class="emotion-4 emotion-5 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                >
                  <kbd
                    class="emotion-6 emotion-7"
                    data-prominence="default"
                    data-sentiment="neutral"
                    data-size="medium"
                    data-testid="key-Ctrl"
                  >
                    <span
                      class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    >
                      Ctrl
                    </span>
                  </kbd>
                  <kbd
                    class="emotion-6 emotion-7"
                    data-prominence="default"
                    data-sentiment="neutral"
                    data-size="medium"
                    data-testid="key-Shift"
                  >
                    <span
                      class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    >
                      ⇧
                    </span>
                  </kbd>
                  <kbd
                    class="emotion-6 emotion-7"
                    data-prominence="default"
                    data-sentiment="neutral"
                    data-size="medium"
                    data-testid="key-A"
                  >
                    <span
                      class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    >
                      A
                    </span>
                  </kbd>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`searchInput > renders with shortcut prop > as boolean 1`] = `
<DocumentFragment>
  .emotion-0 .styles__q3q8041 {
  border: none;
}

.emotion-0 .styles__q3q8045 {
  padding: 0;
}

.emotion-0 .styles__q3q8043 {
  border: none;
}

.emotion-2 {
  cursor: text;
}

.emotion-4 {
  cursor: text;
}

.emotion-6 {
  cursor: default;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #e9eaeb;
  min-width: 1.5rem;
  height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6[data-prominence='strong'] {
  background-color: #151a2d;
  border-color: #d9dadd;
}

.emotion-6[data-prominence='strong'][data-disabled="true"] {
  background-color: #e9eaeb;
  border-color: #e9eaeb;
}

.emotion-6[data-disabled='true'] {
  background-color: #f3f3f4;
  border-color: #d9dadd;
  cursor: not-allowed;
}

.emotion-6[data-sentiment="primary"] {
  background-color: #f1eefc;
  border-color: #8c40ef;
}

.emotion-6[data-sentiment="primary"][data-prominence='strong'] {
  background-color: #8c40ef;
}

.emotion-6[data-sentiment="primary"][data-prominence='strong'][data-disabled="true"] {
  background-color: #e5dbfd;
}

.emotion-6[data-sentiment="primary"][data-disabled='true'] {
  background: #f6f5fd;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-6[data-size="small"] {
  min-width: 1.25rem;
  height: 1.25rem;
}

<div
    data-testid="testing"
  >
    <div
      style="width: 100%;"
    >
      <div
        aria-controls="«r6»"
        aria-describedby="«r6»"
        class="styles__w40vpo9"
        tabindex="0"
      >
        <div
          class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <div>
            <div
              class="styles__q3q8049 styles_large__q3q8046"
              data-disabled="false"
              data-error="false"
              data-has-focus="false"
              data-readonly="false"
              data-success="false"
            >
              <div
                class="styles__q3q8041 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
                data-size="large"
              >
                <div
                  class="emotion-2 emotion-3 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
                  data-testid="search-icon"
                >
                  <svg
                    class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_sentiment_neutral__vbm0wq3 styles_size_small__vbm0wqa styles_undefined_compound_34__vbm0wq1i"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06zM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <input
                aria-invalid="false"
                class="styles__q3q8045"
                data-size="large"
                id="«r7»"
                placeholder="Type something"
                type="text"
                value=""
              />
              <div
                class="styles__q3q8043 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_normal_xxsmall__toi52u5d"
              >
                <div
                  class="emotion-4 emotion-5 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
                >
                  <kbd
                    class="emotion-6 emotion-7"
                    data-prominence="default"
                    data-sentiment="neutral"
                    data-size="medium"
                    data-testid="key-Ctrl"
                  >
                    <span
                      class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    >
                      Ctrl
                    </span>
                  </kbd>
                  <kbd
                    class="emotion-6 emotion-7"
                    data-prominence="default"
                    data-sentiment="neutral"
                    data-size="medium"
                    data-testid="key-K"
                  >
                    <span
                      class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
                    >
                      K
                    </span>
                  </kbd>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
